--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -1,6 +1,7 @@
 /*CSS RESET*/
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Slackey&display=swap');
 
 .material-symbols-outlined {
   font-variation-settings:
@@ -119,15 +120,15 @@ body{
   grid-template-rows: repeat(4, auto);
   grid-template-areas:  "header header header"
                         "novedades novedades novedades"
-                        ". contenedor ."
+                        ". main ."
                         "footer footer footer";
 }
 
 .contenedor-novedades{
   grid-area: novedades;
 }
-.contenedor{
-  grid-area: contenedor;
+.main{
+  grid-area: main;
 }
 .footer{
   grid-area: footer;
@@ -972,6 +973,76 @@ div.categoria h3{
     padding: 10px;
 }
 
+/*--------------------PAGINA HERO----------------------------------*/
+body.hero-page{
+ /* display: grid;
+  overflow: hidden;*/
+  grid-template-columns: 100%;
+ /* justify-content: center;*/
+  grid-template-rows: repeat(3, auto);
+  grid-template-areas:  "header"
+                        "main-hero-page"
+                        "footer";
+}
+
+.main-hero-page{
+  grid-area: main-hero-page;
+}
+
+.hero-chart{
+  display: flex;
+  width: 100%;
+  height: 768px;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  background-size: contain;
+  background-image: url(../img/img-games/hero-section/BackgroundHero.jpg);
+ 
+}
+
+.heroe-space{
+  display: flex;
+}
+
+.hero-title h1 {
+  font-family: 'Slackey', cursive;
+  color: var(--Color-Primary);
+  transform: translateY(-210%);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
+.time-counter h2{
+  font-family: 'Slackey', cursive;
+  color: var(--Color-Primary);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
+.hero2, .hero3, .hero2 img, .hero3 img{
+  height: 80%;
+}
+
+.hero1, .hero2{  
+  transform: translate(-200px, 100px);
+}
+
+.hero3, .hero4{
+  transform: translate(200px, 100px);
+}
+
+.cow-bones, .cow-bones img{
+  display: flex;
+  width: 60%;
+  height: 100%;
+  justify-content: center;
+  position: fixed;
+  transform: translateY(-15%);
+}
+
+
 /*----------------------FOOTER-------------------------------------*/
 
 footer{
@@ -1063,7 +1134,7 @@ justify-content: center;
     grid-template-rows: repeat(4, auto);
     grid-template-areas:  "header header header"
                           "novedades novedades novedades"
-                          ". contenedor ."
+                          ". main ."
                           "footer footer footer";
   }
  
@@ -1116,9 +1187,6 @@ justify-content: center;
   display: none;
  }
 
-/* .carrusel-categorias .contenedor-titulo-controles h3,
- .carrusel-categorias .contenedor-titulo-controles h3,
- .carrusel-categorias .contenedor-titulo-controles h3,*/
  .carrusel-categorias .contenedor-titulo-controles h3{
   text-align: center;
  }
@@ -1135,11 +1203,6 @@ justify-content: center;
  .contenedor-titulo-controles {
    justify-content: center;
 }
-  
-/*.carrusel-categorias .contenedor-carrusel-recomendado{
-    padding: 40px 0px;
-}*/
-
 
 .juego-jugado .contenedor-card-small, 
 .juego-recomendado .contenedor-card-small, 
@@ -1181,7 +1244,6 @@ height: 100%;
 width: 100%;
 position: initial;
 object-fit: cover;
-/* display: none; */
 }
 
 .datos-juego-big {
