--- a/Entregable2/css/Connect_4.css
+++ b/Entregable2/css/Connect_4.css
@@ -54,3 +54,69 @@ section{
 section ul{
 	display: inherit;
 }
+
+span{
+	color: var(--Color-GreyL2);
+}
+
+section.comunidad div.review{
+	display: flex;
+	padding: 10px 0px;
+	border-bottom: 1px solid var(--Color-GreyL3);
+	border-top: 1px solid var(--Color-GreyL3);
+}
+
+section.comunidad div.review .comment-user{
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	width: 250px;
+	flex-shrink: 0;
+	border-right: 1px solid var(--Color-GreyL3);
+}
+
+section.comunidad div.review .comment-avatar,
+section.comunidad div.review h3,
+section.comunidad div.review p{
+	align-self: center;
+}
+
+section.comunidad div.review .comment-comment{
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	gap: 10px;
+}
+
+section.comunidad div.rating{
+	display: flex;
+	justify-content: space-between;
+}
+section.comunidad div.comment-review{
+	display: flex;
+	justify-content: flex-end;
+	gap: 15px;
+}
+
+section.comunidad div.comment-review .material-symbols-outlined{
+	font-size: inherit;
+}
+
+section.comunidad div.thumbs{
+	display: flex;
+}
+
+
+/* Material Symbols */
+.material-symbols-outlined {
+	color: var(--Color-GreyL3);
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+.material-symbols-outlined.filled{
+	font-variation-settings:'FILL' 1;
+}
