--- a/Entregable2/css/Connect_4.css
+++ b/Entregable2/css/Connect_4.css
@@ -11,10 +11,14 @@ body{
 
 main{
 	grid-area: main;
+	gap: 40px;
+	display: flex;
+	flex-direction: column;
 }
 
 nav.breadcrumbs{
 	color: var(--Color-GreyL3);
+	margin-top: 20px;
 }
 
 nav.breadcrumbs ul{
@@ -46,12 +50,16 @@ nav.breadcrumbs ul li{
 	align-self: center;
 }
 
-section{
+main > section{
 	display: flex;
 	flex-direction: column;
 }
 
-section ul{
+section > h3{
+	padding-bottom: 20px;
+}
+
+main section ul{
 	display: inherit;
 }
 
@@ -59,18 +67,25 @@ span{
 	color: var(--Color-GreyL2);
 }
 
-section.comunidad div.review{
+section.how-to ul, section.preview ul{
+	justify-content: space-between;
+}
+
+section.comunidad .review{
 	display: flex;
 	padding: 10px 0px;
 	border-bottom: 1px solid var(--Color-GreyL3);
-	border-top: 1px solid var(--Color-GreyL3);
 }
 
-section.comunidad div.review .comment-user{
+section.comunidad > h3{
+	border-bottom: 1px solid var(--Color-GreyL3);
+}
+
+section.comunidad .review .comment-user{
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
-	width: 250px;
+	width: 280px;
 	flex-shrink: 0;
 	border-right: 1px solid var(--Color-GreyL3);
 }
@@ -81,11 +96,17 @@ section.comunidad div.review p{
 	align-self: center;
 }
 
-section.comunidad div.review .comment-comment{
+section.comunidad .review .comment-comment{
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
 	gap: 10px;
+	width: 100%;
+}
+
+section.comunidad .review .comment-comment p{
+	height: 100%;
+	width: 100%;
 }
 
 section.comunidad div.rating{
@@ -95,7 +116,11 @@ section.comunidad div.rating{
 section.comunidad div.comment-review{
 	display: flex;
 	justify-content: flex-end;
-	gap: 15px;
+	gap: 10px;
+}
+
+section.comunidad div.comment-review > span{
+	margin-right: 10px;
 }
 
 section.comunidad div.comment-review .material-symbols-outlined{
