--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -141,7 +141,7 @@ body{
   position: absolute;
   background: rgba(0, 0, 0, 0.90);/*var(--Color-SecondaryL2);*/
   display: flex;
-
+  z-index: 500;
 }
 
 .wrapper{
@@ -329,8 +329,10 @@ header {
 
 .logo {
   margin-left: -40px;
-  opacity: 50%;
-  margin-top: -50px;
+    opacity: 50%;
+    margin-top: -30px;
+    width: 50%;
+    transform: rotateZ(-30deg)
 }
 
 .bar-btn, .usr-btn{
@@ -570,11 +572,154 @@ div.categoria .icon{
   justify-content: center;
 }
 
-div.categoria h3{
+div.categoria h3, div.categoria a{
   width: 280px;
   flex-shrink: 0;
   align-self: center;
 }
+
+/*-----------------------MODAL COMPRA----------------------------------------*/
+.modalContainerMensaje{
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.3);
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  pointer-events: none;
+  opacity: 0;  
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  transition: opacity 0.3s ease;
+  z-index: 9999;
+}
+
+.mostrar {
+  pointer-events: auto;
+  opacity: 1;
+}
+
+.ocultar {
+  display: none;
+}
+
+.modal {
+  background-color: var(--Color-Secondary);
+  width: 800px;
+  max-width: 90%;
+  padding: 30px 50px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.modalMsge {
+  background-color: var(--Color-Secondary);
+  width: 800px;
+  max-width: 90%;
+  padding: 30px 50px;
+  border-radius: 25px;
+  border: solid var(--Color-GreyL3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  margin-top:40px;
+}
+
+.modalMsge h2{
+  margin-bottom: 20px;
+}
+
+.modal h1 {
+  margin: 0;
+}
+
+textarea{
+	width:100%;
+	height:100px;
+	border:1px solid #f6f6f6;
+	border-radius:3px;
+	background-color:#f6f6f6;			
+	margin:8px 0;
+	resize:none;
+	display:block;
+}
+
+.mb-2 > input{
+  border-radius: 10px;
+  height: 30px;
+}
+
+form label{
+	width:100%;
+	font-weight:bold;
+	display:initial;
+  color: var(--Color-GreyL3);
+}
+
+
+.mb-2{
+  width: 100%;
+  display:flex; 
+  flex-direction: column;
+  padding: 5px;
+}
+
+.modalContainerMensaje .datos-compra{
+  display: flex;
+  flex-direction: row;
+}
+
+.modalContainerMensaje .img-compra{
+  width:30%;
+  height: 80%;
+  display: contents;
+}
+
+.modalContainerMensaje .form-datos-compra{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: flex-start;
+  text-align: start;
+}
+
+.modalContainerMensaje .form .btn-detalle{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.img-compra img{
+  width: 100%;
+  height: 100%;
+}
+
+
+.inputs-form-compra{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.modalContainerMensaje .form .btn-detalle .btn-compra{
+  background-color: var(--Color-AccentS1);
+  border: none;
+  color: var(--Color-GreyF3);
+  padding: 16px 32px;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 10px;
+  color: var(--Color-AccentL3);
+  font-size: 20px;
+} 
+
+.modalContainerMensaje .form .btn-detalle .btn-cancelar{
+  background-color: var(--Color-Secondary);
+  margin-right: 20px;
+}
+
 
 /*-----------------------PREVIEW NOVEDADES-----------------------------------*/
 .contenedor-novedades{
@@ -745,7 +890,7 @@ div.categoria h3{
   display:none;
  }
 
- 
+ .carrusel-categorias .contenedor-carrusel-character,
  .carrusel-categorias .contenedor-carrusel-jugado,
  .carrusel-categorias .contenedor-carrusel-recomendado,
  .carrusel-categorias .contenedor-carrusel-accion,
@@ -757,6 +902,8 @@ div.categoria h3{
   scroll-behavior: smooth;  
  }
 
+ 
+ .carrusel-categorias .contenedor-carrusel-character .carrusel,
  .carrusel-categorias .contenedor-carrusel-jugado .carrusel,
  .carrusel-categorias .contenedor-carrusel-recomendado .carrusel,
  .carrusel-categorias .contenedor-carrusel-accion .carrusel,
@@ -766,6 +913,7 @@ div.categoria h3{
   flex-wrap: nowrap;  
  }
 
+ .carrusel-categorias .contenedor-carrusel-character .carrusel .juego-character,
  .carrusel-categorias .contenedor-carrusel-jugado .carrusel .juego-jugado,
  .carrusel-categorias .contenedor-carrusel-recomendado .carrusel .juego-recomendado,
  .carrusel-categorias .contenedor-carrusel-accion .carrusel .juego-accion,
@@ -780,6 +928,7 @@ div.categoria h3{
   text-align: -webkit-center;
  } 
 
+ .carrusel-categorias .contenedor-carrusel-character .carrusel .juego-character.hover,
  .carrusel-categorias .contenedor-carrusel-jugado .carrusel .juego-jugado.hover,
  .carrusel-categorias .contenedor-carrusel-accion .carrusel .juego-accion.hover,
  .carrusel-categorias .contenedor-carrusel-multijugador .carrusel .juego-multijugador.hover,
@@ -866,7 +1015,6 @@ div.categoria h3{
 .juego-multijugador .card-small,
 .juego-deportes .card-small,
 .contenedor-card-big {
-    /*position: absolute;*/
     display: flex;
     flex-direction: column;
     width: 285px;
@@ -920,7 +1068,7 @@ div.categoria h3{
   margin-bottom: 20px;
 }
 
-.btn-comprar-big-card,
+/*.btn-comprar-big-card,
 .btn-comprar-small-card{
     text-align: right;
     padding: 0px 20px;
@@ -928,7 +1076,7 @@ div.categoria h3{
 
 .btn-comprar-small-card{
     padding: 0px 40px;
-}
+}*/
 
 
 .juego-jugado .card-small .img-juego-small img,
@@ -954,13 +1102,13 @@ div.categoria h3{
     /*display: none;*/
 }
 
-.juego-jugado .contenedor-card-small button,
+/*.juego-jugado .contenedor-card-small button,
 .juego-recomendado .contenedor-card-small button,
 .juego-accion .contenedor-card-small button,
 .juego-multijugador .contenedor-card-small button,
 .juego-deportes .contenedor-card-small button,
 .card-big .datos-juego-big .button{
-    /*position: absolute;*/
+    /*position: absolute;
     text-align: right;
     background: #7B5BCD;
     border-radius: 10px;
@@ -971,7 +1119,7 @@ div.categoria h3{
 
 .card-big .datos-juego-big .button{
     padding: 10px;
-}
+}*/
 
 /*--------------------PAGINA HERO----------------------------------*/
 body.hero-page{
@@ -987,61 +1135,265 @@ body.hero-page{
 
 .main-hero-page{
   grid-area: main-hero-page;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero-chart{
   display: flex;
   width: 100%;
-  height: 768px;
+  height: 100%;
   flex-direction: column;
   align-content: center;
   justify-content: center;
   align-items: center;
-  background-size: contain;
-  background-image: url(../img/img-games/hero-section/BackgroundHero.jpg);
- 
+  background-image: url(../img/img-games/hero-section/BackgroundHero.jpg);  
+  background-size: cover; 
+
 }
 
 .heroe-space{
   display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
 }
 
-.hero-title h1 {
+.hero-title h1, .time-counter h1, .time-counter h2, .history-title h1, 
+.contenedor-carrusel-characters .contenedor-titulo-controles h1,
+.features-chart .features-chart-title h1{
   font-family: 'Slackey', cursive;
-  color: var(--Color-Primary);
-  transform: translateY(-210%);
+  color: var(--Color-Primary);  
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
 
-.time-counter h2{
-  font-family: 'Slackey', cursive;
-  color: var(--Color-Primary);
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+.hero-title h1{
+  transform: translateY(50%);
+  z-index: 100;
 }
 
 .hero2, .hero3, .hero2 img, .hero3 img{
-  height: 80%;
+  height: 50%;
+}
+
+.hero1, .hero4{
+  height: 70%;
 }
 
 .hero1, .hero2{  
-  transform: translate(-200px, 100px);
+  transform: translate(160px, 350px);
+
 }
 
 .hero3, .hero4{
-  transform: translate(200px, 100px);
+  transform: translate(250px, 350px);
+  
 }
 
-.cow-bones, .cow-bones img{
+.reserva{
+  transform: translate(-1250px, -10px);
+
+  height: 70%;
+}
+
+.cow-bones {
+  width: 35%;
+  height: 80%;
+  transform: translate(220px,10px);
+
+}
+
+.time-counter{
+  padding:30px;
+}
+
+.history-chart{
   display: flex;
-  width: 60%;
+  width: 100%;
+  height: 500px;
+  background-image: url(../img/img-games/hero-section/ImgBackHistory.png);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.history-text
+{
+  width: 1148px;
+  height: 200px;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  line-height: normal;
+}
+
+.characters-chart{  
+  background-image: url(../img/img-games/hero-section/ImgBackCharacters.png);
+  background-size: cover; 
+  height: 650px;
+}
+
+.carruseles-categorias-character .contenedor-carrusel-characters{
+  display: flex;  
+  flex-direction: column;
+  align-items: center;
+}
+
+.carruseles-categorias-character .contenedor-principal{
+  width: 90%;
+}
+
+.juego-character .contenedor-card-small-character .datos-juego-small h3{
+    line-height: 36px;
+}
+
+
+.juego-character .contenedor-card-small-character .datos-juego-small p{
+    text-align: center;
+    line-height: 20px;
+    letter-spacing: 0.05em;
+    
+}
+
+.juego-character .contenedor-card-small-character .datos-juegos-small h2{    
+    line-height: 36px;    
+}
+
+.indicador-estado-gratis, .indicador-estado-agregado{
+  display:flex;
+  position: fixed;
+}
+
+.card-small .back-btn{
+  display: none;
+  width: 100%;
   height: 100%;
   justify-content: center;
-  position: fixed;
-  transform: translateY(-15%);
+  align-content: stretch;
+  align-items: center;
 }
 
+.juego-character .titulo-small-card, .juego-character .subtitulo-small-card,
+.juego-character .contenido-small-card, .juego-character .power-small-card{
+  display: flex;  
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+}
+
+.juego-character .contenedor-card-small-character{
+    padding: 40px;   
+    justify-content: center;
+    display: flex;
+}
+
+.contenedor-carrusel-characters .contenedor-titulo-controles{
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.juego-character .card-small-character{
+    display: flex;
+    flex-direction: column;
+    width: 285px;
+    height: 427px;
+    border: var(--Color-GreyL3);
+    border-radius: 23px;
+    border-width: 3px;
+    border-style: solid;
+    background: var(--Color-Primary);
+    cursor: pointer;
+}
+
+.juego-character .card-small-character .datos-juego-small{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 5px 10px;
+}
+
+.juego-character .card-small-character .contenido-small-card{
+  flex-grow: 1;
+}
+
+
+.juego-character .card-small-character .precio-small-card{
+  align-self: center;
+  margin-bottom: 20px;
+}
+
+
+.juego-character .card-small-character .img-juego-small img{
+    border-radius: 20px 20px 0px 0px;
+    height: 234px;
+    width: 280px;
+    position: initial;
+    object-fit:cover;
+    background: var(--Color-Primary);
+}
+
+
+.features-chart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+}
+
+.features-chart .feature-container-a,
+.features-chart .feature-container-b{
+  display: flex;
+  width:550px;
+  height: 200px;
+  padding: 20px;
+}
+
+.features-chart .feature-container-b{
+  flex-direction: row-reverse;
+}
+
+.features-chart .feature-container-a img,
+.features-chart .feature-container-b img{
+  height: 100%;
+
+}
+
+.features-chart .feature-text-a{
+  background-color: var(--Color-SecondaryS1);
+}
+
+.features-chart .feature-container-a .feature-text,
+.features-chart .feature-container-b .feature-text,
+.features-chart .feature-container-a .feature-text-a,
+.features-chart .feature-container-b .feature-text-a{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+
+
+.features-chart .feature-container-a .feature-title,
+.features-chart .feature-container-b .feature-title{
+  margin-bottom: 20px;
+}
+
+
+.features-chart .feature-container-a .feature-p,
+.features-chart .feature-container-b .feature-p{
+  line-height: normal;
+}
+
+
+.container-features-1, .container-features-2{
+  display: flex; 
+}
+
+.container-features-2{
+  flex-wrap: nowrap;
+}
 
 /*----------------------FOOTER-------------------------------------*/
 
@@ -1138,7 +1490,7 @@ justify-content: center;
                           "footer footer footer";
   }
  
-  .header-search-bar .input-buscar, .usr-name{
+.header-search-bar .input-buscar, .usr-name{
     display: none;
   }
 
@@ -1147,6 +1499,7 @@ justify-content: center;
 }
 
 
+.carrusel-categorias .contenedor-carrusel-character .carrusel .juego-character,
 .carrusel-categorias .contenedor-carrusel-jugado .carrusel .juego-jugado,
 .carrusel-categorias .contenedor-carrusel-accion .carrusel .juego-accion,
 .carrusel-categorias .contenedor-carrusel-multijugador .carrusel .juego-multijugador,
@@ -1161,6 +1514,7 @@ justify-content: center;
   transform: scale(0.9,0.9);
  }
 
+ .carrusel-categorias .contenedor-carrusel-character .carrusel .juego-character.hover,
  .carrusel-categorias .contenedor-carrusel-jugado .carrusel .juego-jugado.hover,
  .carrusel-categorias .contenedor-carrusel-accion .carrusel .juego-accion.hover,
  .carrusel-categorias .contenedor-carrusel-multijugador .carrusel .juego-multijugador.hover,
