Se reparan links a paginas y a algunas imagenes de juegos

--- a/Entregable2/css/Connect_4.css
+++ b/Entregable2/css/Connect_4.css
@@ -21,6 +21,10 @@ nav.breadcrumbs{
 	margin-top: 20px;
 }
 
+nav.breadcrumbs a{
+	color: var(--Color-GreyL3);
+}
+
 nav.breadcrumbs ul{
 	display: flex;
 	width: fit-content;
