--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -53,7 +53,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
   
 }
 
@@ -545,7 +545,9 @@ a.nav-menu-deployed{
   color:aqua;
 }
 
-#check, #checkUsr, #check-menu-deployed, .hidden{
+#check, #checkUsr, #check-menu-deployed, .hidden,
+.chk-icon-game-1, .chk-icon-game-2,
+.chk-icon-game{
   display: none;
 }
 
@@ -626,6 +628,11 @@ div.categoria h3, div.categoria a{
   margin-top:40px;
 }
 
+.modal-game{
+  padding: 10px;
+  width: 900px;
+}
+
 .modalMsge h2, .modal-game h2{
   margin-bottom: 20px;
 }
@@ -645,7 +652,7 @@ textarea{
 	display:block;
 }
 
-.mb-2 > input{
+.mb-2 > input, .mb-3 > input{
   border-radius: 10px;
   height: 30px;
 }
@@ -655,14 +662,21 @@ form label{
 	font-weight:bold;
 	display:initial;
   color: var(--Color-GreyL3);
+  padding-bottom: 10px;
 }
 
 
-.mb-2{
+.mb-2, .mb-3{
   width: 100%;
   display:flex; 
   flex-direction: column;
   padding: 5px;
+}
+
+.mb-3{
+  padding: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .modalContainerMensaje .datos-compra, 
@@ -706,6 +720,14 @@ form label{
   width: 100%;
 }
 
+.inputs-form-compra, .inputs-form-jugador-uno{
+  margin-right: 10px;
+}
+
+.inputs-form-compra, .inputs-form-jugador-dos{
+  margin-left:10px;
+}
+
 .modalContainerMensaje .form .btn-detalle .btn-compra,
 .modalContainerMensaje .form .btn-detalle .btn-jugar,
 .modalContainerMensaje .form .btn-detalle .btn-cancelar{
@@ -720,7 +742,6 @@ form label{
   font-size: 20px;
 } 
 
-.modalContainerMensaje .form .btn-detalle .btn-cancelar,
 .modalContainerMensaje .form .btn-detalle .btn-cancelar{
   background-color: var(--Color-Secondary);
   margin-right: 20px;
@@ -740,13 +761,29 @@ form label{
 }
 
 .modal-game .check-radios{
-  justify-content: center;
+  justify-content: space-evenly;
   display: flex;
   flex-direction: row;
 }
 
 .modal-game .radio-check{
   margin-right: 30px;
+}
+
+.modalContainerMensaje .form .iconos-fichas-1, .iconos-fichas-2{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+
+
+.modalContainerMensaje .form .iconos-fichas-1 .chk-icon-game-1:checked ~ label .img-icon-game-1 img,
+.modalContainerMensaje .form .iconos-fichas-2 .chk-icon-game-2:checked ~ label .img-icon-game-2 img,
+.modalContainerMensaje .chk-icon-game:checked ~ label .img-icon-game img
+{
+ /* box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #F1F1F1;*/
+  transform: scale(1.2);
+  transform-origin: center; 
 }
 /*-----------------------PREVIEW NOVEDADES-----------------------------------*/
 .contenedor-novedades{
@@ -1433,7 +1470,7 @@ footer{
   justify-content: space-between;
   padding: 40px 80px 40px 80px;
   background: #270977;
-  width: 100%;
+  /*width: 100%;*/
 }
 
 .contenedor-ppal-footer > div li,
