--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -670,6 +670,7 @@ form label{
 	display:initial;
   color: var(--Color-GreyL3);
   padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 
@@ -682,8 +683,8 @@ form label{
 
 .mb-3{
   padding: 0px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 .modalContainerMensaje .datos-compra, 
@@ -713,6 +714,7 @@ form label{
   height: 50px;
   display: flex;
   justify-content: center;
+  margin-top: 15px;
 }
 
 .img-compra img{
@@ -762,7 +764,7 @@ form label{
   color: var(--Color-GreyL3);
 }
 
-.modal-game .tipo-de-juego, .modal-game .check-radios,
+.modal-game .tipo-de-juego,
 .modal-game .titulo-juego{
     padding-bottom: 20px;
 }
