player se sabe dibujar con fichas

--- a/Entregable3/css/Connect_4.css
+++ b/Entregable3/css/Connect_4.css
@@ -16,6 +16,10 @@ main{
 	flex-direction: column;
 }
 
+canvas{
+	margin: 20px;
+}
+
 nav.breadcrumbs{
 	color: var(--Color-GreyL3);
 	margin-top: 20px;
