--- a/Entregable3/css/Connect_4.css
+++ b/Entregable3/css/Connect_4.css
@@ -50,7 +50,7 @@ nav.breadcrumbs ul li{
 .game-window ul{
 	display: flex;
 	justify-content: space-between;
-	padding: 20px;
+	padding: 0px 20px 20px 20px;
 }
 
 .game-window ul li{
