--- a/Entregable3/css/Connect_4.css
+++ b/Entregable3/css/Connect_4.css
@@ -42,6 +42,8 @@ nav.breadcrumbs ul li{
 }
 
 .game-window{
+	display: flex;
+    flex-direction: column;
 	border: solid var(--Color-GreyL3);
 	width: fit-content;
 	border-radius: 25px;
