--- a/Entregable3/css/style.css
+++ b/Entregable3/css/style.css
@@ -787,7 +787,7 @@ form label{
 }
 
 .modal-game .selec-dif h3, .modal-game label{
-  font-family: 'Star Jedi Rounded';
+  font-family: 'Star Jedi';
   letter-spacing: 5px;
 }
 
